src/components/Grid/Grid.css
.Grid {
    --bg: #030732;
    --fg: rgb(247, 253, 188);
    --bd: white;
    --bg-grid-bounds: rgb(103, 103, 103);
    --bg-content-css: rgb(16, 55, 16);
    --bg-items-css: rgb(77, 11, 11);
    --bg-selected-options: rgb(75, 73, 60);
    --bg-child: #304f5f;
    --bg-child-xtra: rgb(120, 52, 52);
}

.Grid {
    background-color: var(--bg);
    color: var(--fg);
    display: grid;
}

.Grid>div:last-child {
    background-color: var(--bg-grid-bounds);
}

.grid-demo {
    display: grid;
    grid-template-columns: repeat(5, 8rem);
    grid-auto-rows: min-content;
    gap: var(--gap);
    height: 16rem;
}

.grid-cols {
    display: grid;
    grid-auto-flow: column;
    gap: var(--grid-gap);
}

.grid-1col {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: min-content;
    gap: var(--grid-gap);
}

.grid-rows {
    display: grid;
    grid-auto-flow: row;
    gap: var(--grid-gap);
}

.grid-2cols {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--grid-gap);
}

.grid-4cols {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: var(--grid-gap);
}

.grid-8cols {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    gap: var(--grid-gap);
}

.grid-2rows {
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    gap: var(--grid-gap);
}

.grid-4rows {
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    gap: var(--grid-gap);
}

.grid-8rows {
    display: grid;
    grid-template-rows: repeat(8, 1fr);
    gap: var(--grid-gap);
}

.grid-6c4r {
    display: grid;
    grid: repeat(4, minmax(4rem, min-content)) / repeat(6, minmax(6rem, min-content));
    gap: var(--grid-gap);
}

.grid-auto-c {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(6rem, min-content));
    gap: var(--grid-gap);
}

.grid-fieldset-c {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

div.grid-fieldset-item {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: var(--grid-gap);
    margin-right: 0.5rem;
}

.content-css {
    background-color: var(--bg-content-css);
}

.items-css {
    background-color: var(--bg-items-css);
}

.selected-options {
    background-color: var(--bg-selected-options);
    color: var(--fg-selected-options);
    border: 1px solid var(--bd);
    display: grid;
    grid-auto-flow: column;
    grid-template-rows: auto;
    gap: var(--grid-gap);
    justify-content: left;
    padding: 0.5rem;
}

/* -------------------------------------------------------------------- */

.jc-beg {
    justify-content: start;
}

.jc-cen {
    justify-content: center;
}

.jc-end {
    justify-content: end;
}

.jc-spc-ar {
    justify-content: space-around;
}

.jc-spc-bt {
    justify-content: space-between;
}

.jc-spc-ev {
    justify-content: space-evenly;
}

/*  */

.ji-beg {
    justify-items: start;
}

.ji-cen {
    justify-items: center;
}

.ji-end {
    justify-items: end;
}

.ji-left {
    justify-items: left;
}

.ji-right {
    justify-items: right;
}

/* -------------------------------------------------------------------- */

.ac-beg {
    align-content: start;
}

.ac-cen {
    align-content: center;
}

.ac-end {
    align-content: end;
}

.ac-spc-ar {
    align-content: space-around;
}

.ac-spc-bt {
    align-content: space-between;
}

.ac-spc-ev {
    align-content: space-evenly;
}

/*  */

.ai-beg {
    align-items: start;
}

.ai-cen {
    align-items: center;
}

.ai-end {
    align-items: end;
}

/* -------------------------------------------------------------------- */

.pc-beg {
    place-content: start;
}

.pc-cen {
    place-content: center center;
}

.pc-end {
    place-content: end;
}

/*  */

.pi-beg {
    place-items: start;
}

.pi-cen {
    place-items: center;
}

.pi-end {
    place-items: end;
}

/* -------------------------------------------------------------------- */

.box {
    background-color: var(--bg-child);
    border: 1px solid var(--bd);
}

.xtra {
    background-color: var(--bg-child-xtra);
}

